--- a/asporto/index.html
+++ b/asporto/index.html
@@ -71,7 +71,7 @@
         </div>
     </header>
     <div id="menupage-text">
-        <div class="panel-menu-n">
+        <div class="panel-menu-2n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Menu Special <br></h2>
@@ -100,74 +100,86 @@
                 </div>
             </div>
         </div>  
-        <div class="panel-menu-2n">
+        <div class="panel-menu-n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
-                                <p>peperoncini piccanti avvolti nella pancetta</p>
-                            </li>
-                            <li>
-                                <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
-                                <p>petto di pollo di prima scelta impanato e fritto</p>
-                            </li>
-                            <li>
-                                <h3>Alette di Pollo<span class="right">5,5</span></h3>    
-                                <p> in salsa piccante</p>
-                            </li>
-                            <li>
-                                <h3>Nachos Supreme<span class="right">5</span></h3>    
-                                <p>tortilla con peperoncini e cheddar</p>
-                            </li>
-                            <li>
-                                <h3>Nachos Chili<span class="right">6,5</span></h3>    
-                                <p>tortilla con cheddar, carne e fagioli. leggermente piccante</p>
-                            </li>
-                            <li>
-                                <h3>Asparagi al Vapore<span class="right">5</span></h3>
-                                <p>asparagi croccanti serviti con un filo di olio extra vergine di oliva</p>
-                            </li>
-                            <li>
-                                <h3>Rotolo di Frittata<span class="right">5,5</span></h3>
-                                <p>con spinaci e formaggio</p>
-                            </li>
-                            <li>
-                                <h3>Patate Fritte<span class="right">3,5</span></h3>    
-                                <p>patate fritte a bastoncini</p>
-                            </li>
-                        </ul>
+                        <li>
+                            <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
+                            <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                        </li>
+                        <li>
+                            <h3>Mozzarella di Bufala e Pomodorini<span class="right">6,5</span></h3>    
+                            <p>caprese con olio extra vergine di oliva </p>
+                        </li>
+                        <li>
+                            <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
+                            <p>petto di pollo di prima scelta impanato e fritto</p>
+                        </li>
+                        <li>
+                            <h3>Alette di Pollo<span class="right">5,5</span></h3>    
+                            <p> in salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Nachos Supreme<span class="right">5</span></h3>    
+                            <p>tortilla con peperoncini e cheddar</p>
+                        </li>
+                        <li>
+                            <h3>Nachos Chili<span class="right">6,5</span></h3>    
+                            <p>tortilla con cheddar, carne e fagioli. leggermente piccante</p>
+                        </li>
+                        <li>
+                            <h3>Ratatouille<span class="right">4,5</span></h3>
+                            <p>verdure al forno</p>
+                        </li>
+                        <li>
+                            <h3>Verdure Grigliate<span class="right">4,5</span></h3>
+                            <p>verdure di stagione grigliate</p>
+                        </li>
+                        <li>
+                            <h3>Patate Fritte<span class="right">3,5</span></h3>    
+                            <p>patate fritte a bastoncini</p>
+                        </li>
+                        <li>
+                            <h3>Insalata Mista<span class="right">4</span></h3>    
+                            <p>con verdure di stagione</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="panel-menu-n">
+        <div class="panel-menu-2n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger <br><small>Con patate fritte. Cottura media o, a richiesta, al sangue.</small></h2>
+                    <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
+                            <h3>Beerstrot 180 / 360<span class="right">10,5 / 14,5</span></h3>    
+                            <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9 / doppio 14,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9 / doppio 14,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9 / doppio 14,9</span></a></h3> 
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Petaloso<span class="right">8,9</span></h3> 
-                            <p>180 grammi di manzo, composta di feta e pomodorini, latticello, valeriana</p>
+                            <h3>Estivo<span class="right">8,9 / doppio 14,9</span></h3> 
+                            <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
                         </li>
                         <li>
                             <h3>Mini Burger<span class="right">6</span></h3>    
                             <p>100 grammi di manzo, cheddar</p>
                         </li>
                         <li>
-                            <h3>Pollo<span class="right">8,9</span></h3>    
+                            <h3>Pollo<span class="right">8,9 / doppio 14,9</span></h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
@@ -178,39 +190,30 @@
                 </div>   
             </div>
         </div>
-        <div class="panel-menu-2n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Zuppe <br></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Vellutata di Carote<span class="right">4,5</span></h3>    
-                            <p>zuppa di carote con zenzero</p>
-                        </li>
-                    </ul>                      
-                </div>
-            </div>
-        </div>
         <div class="panel-menu-n">
             <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Carni <br></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Costine<span class="right">11,5</span></h3>    
-                            <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
-                        </li>
-                        <li>
-                            <h3>Stinco<span class="right">12</span></h3>    
-                            <p>stinco di maiale al forno servito con purè di patate</p>
-                        </li>
-                        <li>
-                            <h3>Chili<span class="right">7,5</span></h3>    
-                            <p>chili piccante con carne e fagioli servito in pagnotta</p>
-                        </li>
-                    </ul>                      
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Carni <br></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Chili<span class="right">7,5</span></h3>    
+                                <p>chili piccante con carne e fagioli servito in pagnotta</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">11,5</span></a></h3>    
+                                <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                            </li>
+                            <li>
+                                <h3>Tagliata di Pollo<span class="right">12</span></h3>    
+                                <p>300 grammi di petto di pollo servito su letto di rucola</p>
+                            </li>
+                            <li>
+                                <h3>Tagliata di Picanha<span class="right">19</span></h3>    
+                                <p>350 grammi di picanha di manzo servita su letto di rucola</p>
+                            </li>
+                        </ul>                      
+                    </div>
                 </div>
-            </div>
         </div>
         <div class="panel-menu-n">
             <div class="row">
