--- a/menu/index.html
+++ b/menu/index.html
@@ -103,14 +103,18 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
-                                <p>peperoncini piccanti avvolti nella pancetta</p>
+                                <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
+                                <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                            </li>
+                            <li>
+                                <h3>Mozzarella di Bufala e Pomodorini<span class="right">6,5</span></h3>    
+                                <p>caprese con olio extra vergine di oliva </p>
                             </li>
                             <li>
                                 <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
@@ -129,12 +133,12 @@
                                 <p>tortilla con cheddar, carne e fagioli. leggermente piccante</p>
                             </li>
                             <li>
-                                <h3>Asparagi al Vapore<span class="right">5</span></h3>
-                                <p>asparagi croccanti serviti con un filo di olio extra vergine di oliva</p>
+                                <h3>Ratatouille<span class="right">4,5</span></h3>
+                                <p>verdure al forno</p>
                             </li>
                             <li>
-                                <h3>Rotolo di Frittata<span class="right">5,5</span></h3>
-                                <p>con spinaci e formaggio</p>
+                                <h3>Verdure Grigliate<span class="right">4,5</span></h3>
+                                <p>verdure di stagione grigliate</p>
                             </li>
                             <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
@@ -148,37 +152,37 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Beerstrot 360 / 180<span class="right">14,5 / 10,5</span></h3>    
+                                <h3>Beerstrot 180 / 360<span class="right">10,5 / 14,5</span></h3>    
                                 <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9 / doppio 14,9</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9 / doppio 14,9</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9 / doppio 14,9</span></a></h3> 
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Petaloso<span class="right">8,9</span></h3> 
-                                <p>180 grammi di manzo, composta di feta e pomodorini, latticello, valeriana</p>
+                                <h3>Estivo<span class="right">8,9 / doppio 14,9</span></h3> 
+                                <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
                             </li>
                             <li>
                                 <h3>Mini Burger<span class="right">6</span></h3>    
                                 <p>100 grammi di manzo, cheddar</p>
                             </li>
                             <li>
-                                <h3>Pollo<span class="right">8,9</span></h3>    
+                                <h3>Pollo<span class="right">8,9 / doppio 14,9</span></h3>    
                                 <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                             </li>
                             <li>
@@ -189,7 +193,7 @@
                     </div>   
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <!-- <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Zuppe <br></h2>
@@ -201,7 +205,7 @@
                         </ul>                      
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
@@ -216,11 +220,11 @@
                                 <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                             </li>
                             <li>
-                                <h3>Stinco<span class="right">12</span></h3>    
-                                <p>stinco di maiale al forno servito con purè di patate</p>
+                                <h3>Tagliata di Pollo<span class="right">12</span></h3>    
+                                <p>300 grammi di petto di pollo servito su letto di rucola</p>
                             </li>
                             <li>
-                                <h3>Tagliata<span class="right">19</span></h3>    
+                                <h3>Tagliata di Picanha<span class="right">19</span></h3>    
                                 <p>350 grammi di picanha di manzo servita su letto di rucola</p>
                             </li>
                             <li>
@@ -288,8 +292,12 @@
                         <h2 class="subheader">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
-                                <p>peperoncini piccanti avvolti nella pancetta</p>
+                                <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
+                                <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                            </li>
+                            <li>
+                                <h3>Mozzarella di Bufala e Pomodorini<span class="right">6,5</span></h3>    
+                                <p>caprese con olio extra vergine di oliva </p>
                             </li>
                             <li>
                                 <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
@@ -308,12 +316,12 @@
                                 <p>tortilla con cheddar, carne e fagioli. leggermente piccante</p>
                             </li>
                             <li>
-                                <h3>Asparagi al Vapore<span class="right">5</span></h3>
-                                <p>asparagi croccanti serviti con un filo di olio extra vergine di oliva</p>
+                                <h3>Ratatouille<span class="right">4,5</span></h3>
+                                <p>verdure al forno</p>
                             </li>
                             <li>
-                                <h3>Rotolo di Frittata<span class="right">5,5</span></h3>
-                                <p>con spinaci e formaggio</p>
+                                <h3>Verdure Grigliate<span class="right">4,5</span></h3>
+                                <p>verdure di stagione grigliate</p>
                             </li>
                             <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
@@ -333,31 +341,31 @@
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Beerstrot 360 / 180<span class="right">14,5 / 10,5</span></h3>    
+                                <h3>Beerstrot 180 / 360<span class="right">10,5 / 14,5</span></h3>    
                                 <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9 / doppio 14,9</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9 / doppio 14,9</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9 / doppio 14,9</span></a></h3> 
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Petaloso<span class="right">8,9</span></h3> 
-                                <p>180 grammi di manzo, composta di feta e pomodorini, latticello, valeriana</p>
+                                <h3>Estivo<span class="right">8,9 / doppio 14,9</span></h3> 
+                                <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
                             </li>
                             <li>
                                 <h3>Mini Burger<span class="right">6</span></h3>    
                                 <p>100 grammi di manzo, cheddar</p>
                             </li>
                             <li>
-                                <h3>Pollo<span class="right">8,9</span></h3>    
+                                <h3>Pollo<span class="right">8,9 / doppio 14,9</span></h3>    
                                 <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                             </li>
                             <li>
@@ -368,7 +376,7 @@
                     </div>   
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <!-- <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Zuppe <br></h2>
@@ -380,20 +388,7 @@
                         </ul>                      
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Primi<br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Primo del Giorno<span class="right">7,5</span></h3>
-                                <p>lasagne o tagliatelle</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            </div> -->
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
@@ -408,11 +403,11 @@
                                 <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                             </li>
                             <li>
-                                <h3>Stinco<span class="right">12</span></h3>    
-                                <p>stinco di maiale al forno servito con purè di patate</p>
+                                <h3>Tagliata di Pollo<span class="right">12</span></h3>    
+                                <p>300 grammi di petto di pollo servito su letto di rucola</p>
                             </li>
                             <li>
-                                <h3>Tagliata<span class="right">19</span></h3>    
+                                <h3>Tagliata di Picanha<span class="right">19</span></h3>    
                                 <p>350 grammi di picanha di manzo servita su letto di rucola</p>
                             </li>
                             <li>
@@ -724,10 +719,6 @@
                     <div class="large-12 medium-12 columns small-12">
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Spumante Brut<span class="right">14</span></h3>
-                                <p>conti di buscareto</p>
-                            </li>
                             <li>
                                 <h3>Spumante Extra Dry<span class="right">13</span></h3>
                                 <p>val d'oca </p>
