--- a/asporto/index.html
+++ b/asporto/index.html
@@ -159,19 +159,19 @@
                             <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9 / doppio 14,9</span></a></h3>    
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9 / doppio 14,9</span></a></h3>    
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9 / doppio 14,9</span></a></h3> 
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Estivo<span class="right">8,9 / doppio 14,9</span></h3> 
+                            <h3>Estivo<span class="right">8,9</span></h3> 
                             <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
                         </li>
                         <li>
@@ -179,7 +179,7 @@
                             <p>100 grammi di manzo, cheddar</p>
                         </li>
                         <li>
-                            <h3>Pollo<span class="right">8,9 / doppio 14,9</span></h3>    
+                            <h3>Pollo<span class="right">8,9</span></h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
