--- a/menu/index.html
+++ b/menu/index.html
@@ -113,7 +113,7 @@
                                 <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3>Mozzarella di Bufala e Pomodorini<span class="right">6,5</span></h3>    
+                                <h3>Bufala e Pomodorini<span class="right">6,5</span></h3>    
                                 <p>caprese con olio extra vergine di oliva </p>
                             </li>
                             <li>
