--- a/menu/index.html
+++ b/menu/index.html
@@ -465,24 +465,24 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Borgo Reale<span class="right"> 4 | 6</span></h3>
-                                <p>season 6,4%</p>
+                                <h3>Birrificio dei Castelli Palmares<span class="right"> 4 | 6</span></h3>
+                                <p>red ale 5,6%</p>
                             </li>
                             <li>
-                                <h3>Borgo 2512<span class="right"> 4 | 6</span></h3>
-                                <p>belgian ale ambrata 9,5%</p>
+                                <h3>Birrificio Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
+                                <p>light IPA 4,7%</p>
                             </li>
                             <li>
-                                <h3>Emiliano Pomposa Noel<span class="right"> 4 | 6</span></h3>
-                                <p>rossa 7,5%</p>
+                                <h3>Gambrinus Helles<span class="right"> 4 | 6</span></h3>
+                                <p>hell 4,9%</p>
                             </li>
                             <li>
                                 <h3>MC77 Ape Regina<span class="right"> 4 | 6</span></h3>
                                 <p>belgian ale al miele 6,9%</p>
                             </li>
                             <li>
-                                <h3>MC77 Rockstone<span class="right"> 4 | 6</span></h3>
-                                <p>imperial IPA affumicata 8,2%</p>
+                                <h3>MC 77 Bastogne<span class="right"> 4 | 6</span></h3>
+                                <p>american pale ale 6,2%</p>
                             </li>
                             <li>
                                 <h3>MC77 Sofronia<span class="right"> 4 | 6</span></h3>
@@ -493,8 +493,8 @@
                                 <p>stout 5,7%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Mugnetti<span class="right"> 4 | 6</span></h3>
-                                <p>ale 6%</p>
+                                <h3>Mukkeller Hattori Hanzo<span class="right"> 4 | 6</span></h3>
+                                <p>doppia ipa 8,3%</p>
                             </li>
                         </ul>
                     </div>
@@ -540,10 +540,6 @@
                             <li>
                                 <h3>Birrificio del Borgo Maledetta<span class="right">5</span></h3>
                                 <p>6,2% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Birrificio del Borgo Castagnale<span class="right">15</span></h3>
-                                <p>7,5% 75cl</p>
                             </li>
                             <li>
                                 <h3>EvilTwin Citra Sunshine<span class="right">7,5</span></h3>
@@ -598,16 +594,8 @@
                         <h2 class="subheader"><small>Stout e Porter</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Birrificio del Borgo Keto<span class="right">5</span></h3>
-                                <p>5,2% 33cl</p>
-                            </li>
-                            <li>
                                 <h3>Castelli Calix Niger<span class="right">12</span></h3>
                                 <p>7,2% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Westbrook Boo Bear’s<span class="right">13,5</span></h3>
-                                <p>4% 66cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>acide</small></h2>
@@ -641,20 +629,8 @@
                                 <p>6,2% 37,5cl</p>
                             </li>
                             <li>
-                                <h3>Jolly Pumpkin Maracaib<span class="right">17</span></h3>
+                                <h3>Jolly Pumpkin Maracaibo<span class="right">17</span></h3>
                                 <p>7,5% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Jolly Pumpkin Bam Biere<span class="right">17</span></h3>
-                                <p>4,5% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Mad Hatter Manchester Tart<span class="right">5</span></h3>
-                                <p>2,9% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Necromangocon<span class="right">11</span></h3>
-                                <p>6% 50cl</p>
                             </li>
                             <li>
                                 <h3>Tall Tale<span class="right">17</span></h3>
